# mgi-kpi-pipeline

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  _analise_ajustes_manuais.py  _debug_repos.py  _listar_conflitos_manual.py  agendar_task_scheduler.ps1  aplicar_expansao_taxonomia.py  atualizar_dashboard_kpis.py  atualizar_gitlab_issues.py  atualizar_graficos_dashboard.py  atualizar_links_repositorio.py  atualizar_listas_taxonomia.py  atualizar_releases_dashboard.py  backfill_profile_gitlab_ids.py  backfill_status_events.py  calc_formulas.py  coleta_git_contratos.py  config.py  debug_excel.py  debug_json.py  desagendar_task_scheduler.ps1  detectar_area_funcional.py  enriquecer_dev_git.py  excel_com_save.py  flow_stages.py  gerar_graficos_dashboard.py  gitlab_identities.py  inferir_tipo_issue.py  issue_fields.py  issue_filters.py  issue_keys.py  log_maintenance.py  logging_utils.py  modulo_normalization.py  mostrar_todas_linhas.py  normalizar_modulos_planilha.py  package.json  (+17 more)
.github/: CODEOWNERS
docs/: 01-arquitetura.md  02-modulos.md  03-integracao-dashboard.md  04-configuracao-execucao.md  05-agendamento.md  06-status-events.md  08-mirror-github-gitlab.md  08-repositorio-github.md  README.md  legacy-gitlab-ci.yml
templates/: README.md
tests/: conftest.py  test_atualizar_gitlab_issues.py  test_calc_formulas.py  test_coleta_git_contratos.py  test_config.py  test_detectar_area_funcional.py  test_flow_stages.py  test_gitlab_identities.py  test_inferir_tipo_issue.py  test_issue_fields.py  test_issue_filters.py  test_issue_keys.py  test_logging_utils.py  (+8 more)
(+2 files in other folders)
